Fix: remove browser print header overlap, hide navbar on print

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,4 +61,8 @@
   .sticky {
     position: static !important;
   }
+  @page {
+    margin-top: 10mm;
+    margin-bottom: 10mm;
+  }
 }
